--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,7 +5,21 @@ bind l select-pane -R
 
 set-option -g mode-keys vi
 
-
 set -g status-bg red     
 set -g status-fg white
+
+# Move between panes using Alt + Arrow Keys
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
+# Resize panes with Alt + Shift + Arrow keys
+bind -n M-S-Left resize-pane -L 5
+bind -n M-S-Right resize-pane -R 5
+bind -n M-S-Up resize-pane -U 5
+bind -n M-S-Down resize-pane -D 5
+
+# Reload tmux config with Prefix + r
+bind r source-file ~/.tmux.conf \; display-message "Tmux config reloaded!"
 
