--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,7 @@ bind k select-pane -U
 bind l select-pane -R
 
 set-option -g mode-keys vi
+setw -g mode-keys vi
 
 set -g status-bg red     
 set -g status-fg white
